--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 title: Thiago Marinho
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.15.2"
+
+plugins:
+  - jekyll-include-cache
