Add social links

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,10 @@
 title: Thiago Marinho
 theme: minima
+
+minima:
+  social_links:
+    twitter: thiagomarinho
+    github: thiagomarinho
+    telegram: thiagomarinho
+    facebook: thiagoomarinho
+    linkedin: thiagoomarinho
