Update minima theme to 3.0

--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,7 @@ header_pages:
 
 google_analytics: UA-21612517-1
 
+plugins:
+  - jekyll-remote-theme
 
-theme: minima
+remote_theme: jekyll/minima
