--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,13 @@ linkedin_username: thiagoomarinho
 
 google_analytics: UA-21612517-1
 
-theme: jekyll-theme-clean-blog
-
-markdown: kramdown
-paginate: 5
-paginate_path: "/posts/page:num/"
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
+
+remote_theme: jekyll-theme-clean-blog
+markdown: kramdown
+paginate: 5
+paginate_path: "/posts/page:num/"
