--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 
-remote_theme: jekyll-theme-clean-blog
+remote_theme: StartBootstrap/startbootstrap-clean-blog-jekyll
 markdown: kramdown
 paginate: 5
 paginate_path: "/posts/page:num/"
