--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,11 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-multiple-languages-plugin
 
 remote_theme: StartBootstrap/startbootstrap-clean-blog-jekyll
 markdown: kramdown
 paginate: 5
 paginate_path: "/posts/page:num/"
+languages: ["pt-br", "en"]
+exclude_from_localizations: ["javascript", "images", "css"]
