Add link to post in another language (when there is translation available)

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -3,7 +3,14 @@ pages:
   posts: Posts
   projects: Projects
   home: Home
+
 links:
   about: about
   posts: posts
   projects: projects
+
+main:
+  posts:
+    toc: Sumary
+    translate: You could read this post in
+    prev-next: Ready also
