update ga number

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ twitter_username: thiagomarinho
 github_username: thiagomarinho
 linkedin_username: thiagoomarinho
 
-google_analytics: UA-21612517-1
+google_analytics: G-CLVZTD5ZQH
 
 plugins:
   - jekyll-remote-theme
